Add port-based tc speed limits
